# zinnobre-iron

./: .gitignore  Cargo.toml  flake.nix
.github/workflows/: rust.yml
assets/: settings.ron
src/: main.rs
src/app/: mod.rs  settings.rs  shared.rs
src/input/: mod.rs
src/netcode/: client.rs  mod.rs  protocol.rs  server.rs  shared.rs
src/render/: mod.rs
